--- a/src/app/index.sass
+++ b/src/app/index.sass
@@ -23,6 +23,8 @@
     .types
       flex: 1
       .type
+        height: 100%
+        overflow-y: auto
         .type-title
           margin-left: 30px
         .charts
@@ -30,6 +32,6 @@
           flex-wrap: wrap
           justify-content: space-around
           .chart
-            width: 600px
-            height: 400px
+            width: 500px
+            height: 300px
             box-shadow: 2px 2px 4px #888
