--- a/src/app/index.sass
+++ b/src/app/index.sass
@@ -1,5 +1,6 @@
 @import '../style/sass.sass'
 .app
+  background: #f8f8f8
   height: 100%
   .header
     +space-between
@@ -20,11 +21,14 @@
         display: block
         padding: 4px 20px
         text-decoration: none
+        font-weight: bold
     .types
       flex: 1
+      overflow-y: auto
+      height: 100%
       .type
-        height: 100%
-        overflow-y: auto
+        padding-bottom: 30px
+        border-bottom: $border2
         .type-title
           margin-left: 30px
         .charts
@@ -32,6 +36,7 @@
           flex-wrap: wrap
           justify-content: space-around
           .chart
+            background: #fff
             width: 500px
             height: 300px
             box-shadow: 2px 2px 4px #888
