--- a/src/app/index.sass
+++ b/src/app/index.sass
@@ -40,3 +40,6 @@
             width: 500px
             height: 300px
             box-shadow: 2px 2px 4px #888
+            &.chart-bg
+              width: 700px
+              height: 440px
