--- a/src/app/index.sass
+++ b/src/app/index.sass
@@ -27,7 +27,6 @@
       overflow-y: auto
       height: 100%
       .type
-        padding-bottom: 30px
         border-bottom: $border2
         .type-title
           margin-left: 30px
@@ -35,7 +34,11 @@
           display: flex
           flex-wrap: wrap
           justify-content: space-around
+          .chart-title
+            .desc
+              color: $color-grey
           .chart
+            margin-bottom: 30px
             background: #fff
             width: 500px
             height: 300px
