--- a/src/style/sass.sass
+++ b/src/style/sass.sass
@@ -1,9 +1,23 @@
+$color-main-dark: #218c74
+$color-main: #33d9b2
+
+$color-grey: #666666
+
+$color-font-white: #eee
+
 $border: 1px solid #aaa
 $border2: 1px solid #ddd
-$color-grey: #666666
+
+@keyframes spin
+  to
+    transform: rotate(360deg)
 
 =space-between
   display: flex
   align-items: center
   justify-content: space-between
+
+=align-center
+  display: flex
+  align-items: center
   
