--- a/src/page/index.sass
+++ b/src/page/index.sass
@@ -1,6 +1,9 @@
+@import '../style/sass.sass'
+
 body, html
   margin: 0
   padding: 0
-  font-size: 16px
   line-height: 2
   height: 100%
+  font-size: $size-font
+  
