--- a/src/style/sass.sass
+++ b/src/style/sass.sass
@@ -3,11 +3,14 @@ $color-main: #33d9b2
 
 $color-grey: #666666
 
+$color-font: #000
 $color-font-white: #eee
 
 $border: 1px solid #aaa
 $border2: 1px solid #ddd
 
+$size-font: 14px
+  
 @keyframes spin
   to
     transform: rotate(360deg)
@@ -20,4 +23,7 @@ $border2: 1px solid #ddd
 =align-center
   display: flex
   align-items: center
-  
+
+a
+  text-decoration: none
+  color: $color-font
